media/boom/css/boom/menu.less
#b-menu {
	position: fixed;
	z-index: 4;
	background: @darkest-grey;

	ul {
		padding-left: 1em;
	}

	li {
		list-style-type: none;
	}

	img {
		max-width: 80%;
		height: auto;
		margin: 11px auto 2em auto;
		display: block;
	}

	a {
		.text-large;
		color: @lightest-grey;

		&:hover, &:focus, &:active {
			background: @light-grey;
		}
	}

	&.pushy-open {
		padding-left: 60px;
		left: 0;
	}
}

#b-menu-button {
	position: fixed;
	top: 0;
	left: 5px;
	z-index: 5;
}

body.pushy-active {
	#b-menu-button {
		background: @light-grey;
	}
}

